@@ -17,6 +17,9 @@ Media information:
 * determine USB serial number
 * use pre windows XP io control codes as fallback ?
 
+20100209
+* worked on direct IO
+
 20100202
 * worked on retrieving media size when not set for read
 
